Fixes #3867: drop down button arrow icon does not display properly in high contrast mode on IE7. Since we are using icons for non-high-contrast mode there's no reason to put formatting on the arrow characters for high-contrast mode. Patch from Pete Brunet (IBM, CCLA on file)
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10102 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -137,19 +137,6 @@
 	background-color:transparent !important;
 }
 
-.dijitA11yDownArrow,
-.dijitA11yUpArrow,
-.dijitA11ySideArrow {
-	/* down arrow shown when in a11y mode */
-	font-family:Arial, sans serif;
-	/* 
-	font-size:.5em;
-	line-height:.5em;
-	*/
-	line-height: 0.5em;
-	font-size: x-small;
-	padding:0em .25em;
-}
 .dijitCalendarIncrementControl .dijitA11ySideArrow { 
 	padding-left:.2em; 
 }
